--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -55,8 +55,8 @@ display:
           id: 0
           total_pages: 0
           tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
+            previous: '‹ Forrige'
+            next: 'Næste ›'
           expose:
             items_per_page: false
             items_per_page_label: 'Antal elementer'
@@ -794,8 +794,8 @@ display:
           id: 0
           total_pages: 0
           tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
+            previous: '‹ Forrige'
+            next: 'Næste ›'
           expose:
             items_per_page: false
             items_per_page_label: 'Antal elementer'
