--- a/config/sync/views.view.content.yml
+++ b/config/sync/views.view.content.yml
@@ -47,10 +47,10 @@ display:
         options:
           items_per_page: 50
           tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
+            previous: '‹ Forrige'
+            next: 'Næste ›'
+            first: '« Første'
+            last: 'Sidste »'
       style:
         type: table
         options:
@@ -253,7 +253,7 @@ display:
           table: users_field_data
           field: name
           relationship: uid
-          label: Author
+          label: Forfatter
           exclude: false
           alter:
             alter_text: false
@@ -271,7 +271,7 @@ display:
           id: changed
           table: node_field_data
           field: changed
-          label: Updated
+          label: Opdateret
           exclude: false
           alter:
             alter_text: false
@@ -391,8 +391,8 @@ display:
           type: boolean
           settings:
             format: yes-no
-            format_custom_true: Published
-            format_custom_false: Unpublished
+            format_custom_true: Udgivet
+            format_custom_false: 'Ikke udgivet'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -646,7 +646,7 @@ display:
           table: views
           field: area_text_custom
           empty: true
-          content: 'No content available.'
+          content: 'Der er intet indhold at vise.'
           plugin_id: text_custom
       arguments: {  }
       relationships:
