--- a/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
+++ b/config/sync/core.entity_view_display.node.event.embedded_teaser_list.yml
@@ -78,6 +78,7 @@ hidden:
   field_vih_event_status: true
   field_vih_paragraphs: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
   links: true
   scheduled_update: true
