--- a/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -58,5 +58,6 @@ hidden:
   field_vih_image: true
   field_vih_paragraphs: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
   scheduled_update: true
