--- a/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
@@ -64,6 +64,7 @@ hidden:
   field_vih_course_week_price: true
   field_vih_paragraphs: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
   links: true
   scheduled_update: true
