--- a/config/sync/webform.webform.fa_brochurer_om_de_korte_kurser.yml
+++ b/config/sync/webform.webform.fa_brochurer_om_de_korte_kurser.yml
@@ -1,4 +1,4 @@
-uuid: e5535baf-1511-4faa-a592-b2fee9a54c83
+uuid: 2b481b8a-cb2c-4701-940c-c922b755fc72
 langcode: da
 status: open
 dependencies:
@@ -8,18 +8,18 @@ open: null
 close: null
 uid: 2
 template: false
-id: bestil_brochurer
-title: 'Bestil brochurer'
-description: 'Used to order brochures for the long stays'
+id: fa_brochurer_om_de_korte_kurser
+title: 'Få brochurer om de korte kurser'
+description: 'Used to order brochures for the short stays'
 category: ''
-elements: "processed_text:\n  '#type': processed_text\n  '#text': \"<p>Få tilsendt vores brochurer, så du kan læse endnu mere om højskolen i fred og ro. Hvis du ikke kan vente på posten, kan du selv printe brochurerne fra menuen til venstre.</p>\\r\\n\\r\\n<p><strong>Få priser</strong>: Oplysninger om priser findes under de enkelte&nbsp;<a href=\\\"/langekurser\\\">lange kurser</a>&nbsp;og&nbsp;<a href=\\\"/kortekurser\\\">korte kurser</a>&nbsp;her på hjemmesiden.</p>\\r\\n\"\n  '#format': rich_text\nhvordan_vil_du_modtage_brochuren_:\n  '#type': fieldset\n  '#title': 'Hvordan vil du modtage brochuren?'\n  version:\n    '#type': checkboxes\n    '#title': Version\n    '#options':\n      'Digital version - PDF på e-mail': 'Digital version - PDF på e-mail'\n      'Papirversion i postkassen': 'Papirversion i postkassen'\nmine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  adresse:\n    '#type': webform_address\n    '#title': Adresse\n    '#states':\n      visible:\n        ':input[name=\"version[Papirversion i postkassen]\"]':\n          checked: true\n    '#address_2__access': false\n    '#state_province__access': false\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  fa_opdateringer_fra_hojskolen:\n    '#type': checkbox\n    '#title': 'Få opdateringer fra højskolen'\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  brochurer:\n    '#type': checkboxes\n    '#title': Interesser\n    '#options':\n      'Lange ophold': 'Lange ophold'\n      'Politiforberedende linje': 'Politiforberedende linje'\n      Sportsjournalistlinje: Sportsjournalistlinje\n  sporgsmal:\n    '#type': textarea\n    '#title': Spørgsmål\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\n  jeg_accepterer_at_brochuren_sendes_til_mig_pa_e_mail:\n    '#type': checkbox\n    '#title': 'Jeg accepterer at brochuren sendes til mig på e-mail'\n    '#states':\n      visible:\n        ':input[name=\"version[Digital version - PDF på e-mail]\"]':\n          checked: true\n    '#default_value': true\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Få brochurer og læs endnu mere om højskolen'\n"
+elements: "processed_text:\n  '#type': processed_text\n  '#text': \"<p>Få tilsendt vores brochurer, så du kan læse endnu mere om højskolen i fred og ro.</p>\\r\\n\\r\\n<p><strong>Få priser</strong>: Oplysninger om priser findes inde under de&nbsp;<a href=\\\"/kortekurser\\\">korte kurser</a>&nbsp;her på hjemmesiden.</p>\\r\\n\"\n  '#format': rich_text\nhvordan_vil_du_modtage_brochuren_:\n  '#type': fieldset\n  '#title': 'Hvordan vil du modtage brochuren?'\n  version:\n    '#type': checkboxes\n    '#title': Version\n    '#options':\n      'Digital version - PDF på e-mail': 'Digital version - PDF på e-mail'\n      'Papirversion i postkassen': 'Papirversion i postkassen'\nmine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  adresse:\n    '#type': webform_address\n    '#title': Adresse\n    '#states':\n      visible:\n        ':input[name=\"version[Papirversion i postkassen]\"]':\n          checked: true\n    '#address_2__access': false\n    '#state_province__access': false\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  fa_opdateringer_fra_hojskolen:\n    '#type': checkbox\n    '#title': 'Få opdateringer fra højskolen'\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  sporgsmal:\n    '#type': textarea\n    '#title': Spørgsmål\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\n  jeg_er_indforstaet_med_at_jeg_far_brochuren_tilsendt_pa_e_mail:\n    '#type': checkbox\n    '#title': 'Jeg er indforstået med, at jeg får brochuren tilsendt på e-mail'\n    '#states':\n      visible:\n        ':input[name=\"version[Digital version - PDF på e-mail]\"]':\n          checked: true\n    '#default_value': true\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Få brochurer og læs endnu mere om højskolen'\n"
 css: ''
 javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
   page: true
-  page_submit_path: ''
+  page_submit_path: /kortekurser/brochure
   page_confirm_path: ''
   form_submit_once: false
   form_exception_message: ''
@@ -206,14 +206,12 @@ handlers:
     conditions: {  }
     weight: 0
     settings:
-      list: aa37949c97
+      list: 2f23bd83ff
       email: e_mail
       double_optin: true
       mergevars: ''
-      interest_groups:
-        667629d4ad:
-          8c08c59fb9: 8c08c59fb9
-      control: fa_opdateringer_fra_hojskolen
+      interest_groups: {  }
+      control: jeg_er_indforstaet_med_at_jeg_far_brochuren_tilsendt_pa_e_mail
   mailchimp_1:
     id: mailchimp
     label: MailChimp
@@ -222,9 +220,11 @@ handlers:
     conditions: {  }
     weight: 0
     settings:
-      list: ccfa4eef27
+      list: aa37949c97
       email: e_mail
       double_optin: true
       mergevars: ''
-      interest_groups: {  }
-      control: jeg_accepterer_at_brochuren_sendes_til_mig_pa_e_mail
+      interest_groups:
+        667629d4ad:
+          fa15af475b: fa15af475b
+      control: fa_opdateringer_fra_hojskolen
