--- a/config/sync/webform.webform.request_for_more_information.yml
+++ b/config/sync/webform.webform.request_for_more_information.yml
@@ -1,7 +1,9 @@
 uuid: afb3de2d-7337-47d7-822b-e0a109933f62
 langcode: da
 status: open
-dependencies: {  }
+dependencies:
+  module:
+    - webform_mailchimp
 open: null
 close: null
 uid: 2
@@ -10,7 +12,7 @@ id: request_for_more_information
 title: 'Request for more information'
 description: 'Form is used for internationals to request more information about a stay.'
 category: ''
-elements: "course_information:\n  '#type': fieldset\n  '#title': 'Course information'\n  when_do_you_want_to_start_:\n    '#type': textfield\n    '#title': 'When do you want to start?'\n  which_subjects_are_you_interested_in_:\n    '#type': textarea\n    '#title': 'Which subjects are you interested in?'\ncontact_information:\n  '#type': fieldset\n  '#title': 'Contact information'\n  name:\n    '#type': textfield\n    '#title': Name\n  phone:\n    '#type': tel\n    '#title': Phone\n    '#international': true\n  email:\n    '#type': email\n    '#title': Email\n    '#required': true\n  country:\n    '#type': textfield\n    '#title': Nationality\n  how_old_are_you_:\n    '#type': textfield\n    '#title': 'How old are you?'\nmore_information:\n  '#type': fieldset\n  '#title': 'More information'\n  how_did_you_hear_about_vejle_idraetshojskole_:\n    '#type': textfield\n    '#title': 'How did you hear about Vejle Idrætshøjskole?'\n  question_:\n    '#type': textarea\n    '#title': 'Question?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Get more information about scholarship'\n"
+elements: "course_information:\n  '#type': fieldset\n  '#title': 'Course information'\n  when_do_you_want_to_start_:\n    '#type': textfield\n    '#title': 'When do you want to start?'\n  which_subjects_are_you_interested_in_:\n    '#type': textarea\n    '#title': 'Which subjects are you interested in?'\ncontact_information:\n  '#type': fieldset\n  '#title': 'Contact information'\n  name:\n    '#type': textfield\n    '#title': Name\n  phone:\n    '#type': tel\n    '#title': Phone\n    '#international': true\n  email:\n    '#type': email\n    '#title': Email\n    '#required': true\n  country:\n    '#type': textfield\n    '#title': Nationality\n  how_old_are_you_:\n    '#type': textfield\n    '#title': 'How old are you?'\n  get_updates_from_the_school:\n    '#type': checkbox\n    '#title': 'Get updates from the school'\nmore_information:\n  '#type': fieldset\n  '#title': 'More information'\n  how_did_you_hear_about_vejle_idraetshojskole_:\n    '#type': textfield\n    '#title': 'How did you hear about Vejle Idrætshøjskole?'\n  question_:\n    '#type': textarea\n    '#title': 'Question?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Get more information about scholarship'\n"
 css: ''
 javascript: ''
 settings:
@@ -128,4 +130,50 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers: {  }
+handlers:
+  mailchimp:
+    id: mailchimp
+    label: MailChimp
+    handler_id: mailchimp
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      list: 35f662e3f7
+      email: email
+      double_optin: true
+      mergevars: ''
+      interest_groups: {  }
+      control: get_updates_from_the_school
+  e_mail:
+    id: email
+    label: E-mail
+    handler_id: e_mail
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:email:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: dina@vih.dk
+      from_options: {  }
+      from_name: 'Dina Knudsen - VIH'
+      subject: 'We will contact you shortly'
+      body: "Thank you for your interest in Vejle Idr&aelig;tsh&oslash;jskole. We will contact you shortly with more information.<br />\n<br />\nIf you want to see news and pictures from Vejle Idr&aelig;tsh&oslash;jskole, please join our international Facebook group: https://www.facebook.com/groups/iinternationalsvih/&nbsp;<br />\n<br />\nYou can see your submission here:<br />\n[submission:values]<br />\n<br />\nYours sincerely,<br />\nA friendly e-mail robot<br />\nVejle Idr&aelig;tsh&oslash;jskole"
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
