--- a/config/sync/webform.webform.sporgsmal_om_lange_kurser.yml
+++ b/config/sync/webform.webform.sporgsmal_om_lange_kurser.yml
@@ -1,7 +1,9 @@
 uuid: 7771b15f-6765-4b97-aba2-7a815393ca6e
 langcode: da
 status: open
-dependencies: {  }
+dependencies:
+  module:
+    - webform_mailchimp
 open: null
 close: null
 uid: 2
@@ -10,7 +12,7 @@ id: sporgsmal_om_lange_kurser
 title: 'Spørgsmål om lange kurser'
 description: 'Formularen bruges til almindelige sp&oslash;rgsm&aring;l om lange kurser.'
 category: ''
-elements: "mine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  hvornar_er_du_interesseret_i_at_starte_:\n    '#type': textfield\n    '#title': 'Hvornår er du interesseret i at starte?'\n  hvad_er_dine_idraetsinteresser_:\n    '#type': textarea\n    '#title': 'Hvad er dine idrætsinteresser?'\n  har_du_sporgsmal_til_vores_lange_kurser_:\n    '#type': textfield\n    '#title': 'Har du spørgsmål til vores lange kurser?'\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Send mit spørgsmål'\n"
+elements: "mine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\n  fa_opdateringer_fra_hojskolen:\n    '#type': checkbox\n    '#title': 'Få opdateringer fra højskolen'\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  hvornar_er_du_interesseret_i_at_starte_:\n    '#type': textfield\n    '#title': 'Hvornår er du interesseret i at starte?'\n  hvad_er_dine_idraetsinteresser_:\n    '#type': textarea\n    '#title': 'Hvad er dine idrætsinteresser?'\n  har_du_sporgsmal_til_vores_lange_kurser_:\n    '#type': textfield\n    '#title': 'Har du spørgsmål til vores lange kurser?'\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Send mit spørgsmål'\n"
 css: ''
 javascript: ''
 settings:
@@ -128,4 +130,85 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers: {  }
+handlers:
+  mailchimp:
+    id: mailchimp
+    label: MailChimp
+    handler_id: mailchimp
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      list: aa37949c97
+      email: e_mail
+      double_optin: true
+      mergevars: ''
+      interest_groups:
+        667629d4ad:
+          8c08c59fb9: 8c08c59fb9
+          fa15af475b: fa15af475b
+      control: fa_opdateringer_fra_hojskolen
+  e_mail:
+    id: email
+    label: E-mail
+    handler_id: e_mail
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:e_mail:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: ps@vih.dk
+      from_options: {  }
+      from_name: 'Peter Sebastian Petersen - VIH'
+      subject: 'Tak for dit spørgsmål'
+      body: "Tak for dit sp&oslash;rgsm&aring;l. Vi kontakter dig en af de n&aelig;rmeste dage med et svar.<br />\n<br />\nI mellemtiden kan du tjekke os ud p&aring; http://facebook.com/vejleih - og m&aring;ske kunne du ogs&aring; have lyst til at tilmelde dig vores nyhedsbrev p&aring; http://vih.dk/nyhedsbrev, hvor du f&aring;r tips og tricks til alle mulige forskellige idr&aelig;tsgrene.<br />\n<br />\n[submission:values]<br />\n<br />\nMed venlig hilsen<br />\nEn agtp&aring;givende og snarr&aring;dig e-mail-robot<br />\nVejle Idr&aelig;tsh&oslash;jskole"
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+  e_mail_vih:
+    id: email
+    label: E-mail
+    handler_id: e_mail_vih
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: ps@vih.dk
+      to_options: {  }
+      cc_mail: dina@vih.dk
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: '[webform_submission:values:e_mail:raw]'
+      from_options: {  }
+      from_name: '[webform_submission:values:navn:raw]'
+      subject: default
+      body: default
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      html: true
+      attachments: false
+      twig: false
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
