--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -116,7 +116,7 @@ vih_subscription.admin.edbbrugsen.settings_form:
   path: '/admin/config/vih_subscription/edbbrugsen/settings'
   defaults:
     _form: '\Drupal\vih_subscription\Form\EdbbrugsenSettingsForm'
-    _title: 'EDBBrugsen integration settings'
+    _title: 'KomIT integration settings'
   requirements:
     _permission: 'access administration pages'
   options:
