Altered fieldwidget to bind Linkit module for Banner link field

--- a/docroot/modules/custom/bellcom_common/bellcom_common.info.yml
+++ b/docroot/modules/custom/bellcom_common/bellcom_common.info.yml
@@ -1,6 +1,8 @@
 type: module
-name: Datetime widget tweaks
-description: 'Remove seconds from datetime widget'
+name: Bellcom common functionality module
 package: Vih
 
 core: '8.x'
+dependencies:
+  - link
+  - linkit
