--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
@@ -19,9 +19,11 @@ dependencies:
     - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_contact_person
     - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
+    - paragraphs.paragraphs_type.vih_wrapper
     - taxonomy.vocabulary.vih_class
   module:
     - entity_reference_revisions
@@ -48,9 +50,10 @@ settings:
       list_of_news_teasers: list_of_news_teasers
       social_media_embed: social_media_embed
       long_course_list_: long_course_list_
-      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       employee: employee
+      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       gallery: gallery
+      vih_wrapper: vih_wrapper
       short_course_list_: short_course_list_
       user_quote: user_quote
       video: video
@@ -58,6 +61,7 @@ settings:
       long_course_list_contain_class: long_course_list_contain_class
       vih_teacher_class_description: vih_teacher_class_description
       vih_webform: vih_webform
+      vih_contact_person: vih_contact_person
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
@@ -83,15 +87,18 @@ settings:
       long_course_list_:
         enabled: true
         weight: 29
-      vih_list_of_news_list_advanced:
+      employee:
         enabled: true
         weight: 30
-      employee:
+      vih_list_of_news_list_advanced:
         enabled: true
         weight: 30
       gallery:
         enabled: true
         weight: 31
+      vih_wrapper:
+        enabled: true
+        weight: 32
       short_course_list_:
         enabled: true
         weight: 32
@@ -137,13 +144,16 @@ settings:
       vih_single_class_group:
         weight: 44
         enabled: false
-      vih_banner_slide:
-        weight: 45
-        enabled: false
       vih_teacher_class_description:
         enabled: true
         weight: 45
+      vih_banner_slide:
+        weight: 45
+        enabled: false
       vih_webform:
         enabled: true
         weight: 46
+      vih_contact_person:
+        enabled: true
+        weight: 49
 field_type: entity_reference_revisions
