--- a/config/sync/core.entity_form_display.paragraph.vih_contact_person.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_contact_person.default.yml
@@ -8,11 +8,14 @@ dependencies:
     - field.field.paragraph.vih_contact_person.field_vih_background_img
     - field.field.paragraph.vih_contact_person.field_vih_heading
     - field.field.paragraph.vih_contact_person.field_vih_link
+    - field.field.paragraph.vih_contact_person.field_vih_text
+    - field.field.paragraph.vih_contact_person.field_vih_user
     - paragraphs.paragraphs_type.vih_contact_person
   module:
     - entity_browser
     - field_group
     - link
+    - text
     - workbench_moderation
 third_party_settings:
   field_group:
@@ -21,7 +24,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 2
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -65,12 +68,29 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 1
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
+    region: content
+  field_vih_text:
+    weight: 2
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
+  field_vih_user:
+    weight: 1
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
 hidden:
   created: true
