--- a/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
+++ b/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
@@ -18,9 +18,11 @@ dependencies:
     - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_contact_person
     - paragraphs.paragraphs_type.vih_content_grid
     - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_webform
+    - paragraphs.paragraphs_type.vih_wrapper
   module:
     - entity_reference_revisions
     - user
@@ -48,6 +50,7 @@ settings:
       long_course_list_: long_course_list_
       vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       employee: employee
+      vih_wrapper: vih_wrapper
       short_course_list_: short_course_list_
       user_quote: user_quote
       video: video
@@ -56,6 +59,7 @@ settings:
       social_media_embed: social_media_embed
       vih_content_grid: vih_content_grid
       vih_webform: vih_webform
+      vih_contact_person: vih_contact_person
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
@@ -84,6 +88,9 @@ settings:
       employee:
         enabled: true
         weight: 31
+      vih_wrapper:
+        enabled: true
+        weight: 32
       short_course_list_:
         enabled: true
         weight: 32
@@ -102,21 +109,21 @@ settings:
       vih_course_slot:
         weight: 36
         enabled: false
-      vih_option:
+      long_course_list_contain_class:
         weight: 37
         enabled: false
-      long_course_list_contain_class:
+      vih_option:
         weight: 37
         enabled: false
       vih_option_group:
         weight: 38
         enabled: false
-      vih_ordered_course_period:
-        weight: 39
-        enabled: false
       social_media_embed:
         enabled: true
         weight: 39
+      vih_ordered_course_period:
+        weight: 39
+        enabled: false
       vih_ordered_course_person:
         weight: 40
         enabled: false
@@ -135,13 +142,16 @@ settings:
       vih_single_class_group:
         weight: 44
         enabled: false
-      vih_banner_slide:
+      vih_teacher_class_description:
         weight: 45
         enabled: false
-      vih_teacher_class_description:
+      vih_banner_slide:
         weight: 45
         enabled: false
       vih_webform:
         enabled: true
         weight: 46
+      vih_contact_person:
+        enabled: true
+        weight: 49
 field_type: entity_reference_revisions
