VI-313 Displayed paragraphs avdalsed list view mode

--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -14,8 +14,10 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class.field_vih_subheading
     - field.field.taxonomy_term.vih_class.field_vih_top_banner
+    - field.field.taxonomy_term.vih_class.field_vih_top_banner_text
     - taxonomy.vocabulary.vih_class
   module:
+    - entity_reference_revisions
     - panelizer
     - text
 third_party_settings:
@@ -52,13 +54,22 @@ content:
       view_mode: vih_list_advanced
       link: false
     third_party_settings: {  }
+  field_vih_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      view_mode: embedded
+      link: ''
+    third_party_settings: {  }
 hidden:
   field_metatag: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
-  field_vih_paragraphs: true
   field_vih_subheading: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
