--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -47,13 +47,13 @@ _core:
   default_config_hash: OlBvbDcm2PUT2i28p3oNpuKaUKbbK4qjfrAyYxvd0B8
 cookie_session: 0
 method: default
-disagree_button_label: Disagree
+disagree_button_label: 'No, thanks'
 whitelisted_cookies: ''
 disabled_javascripts: ''
-consent_storage_method: basic
+consent_storage_method: do_not_store
 withdraw_message:
-  value: ''
-  format: rich_text
-withdraw_action_button_label: ''
-withdraw_tab_button_label: ''
-withdraw_enabled: false
+  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>You have given your consent for us to set cookies.</p>'
+  format: plain_text
+withdraw_action_button_label: 'Withdraw consent'
+withdraw_tab_button_label: 'Privacy settings'
+withdraw_enabled: true
