VI-363 Scheduled publishing improvement.

--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -73,11 +73,12 @@ third_party_settings:
       weight: 3
       format_type: tab
       format_settings:
-        id: ''
-        classes: ''
-        formatter: closed
+        label: Andet
+        formatter: open
         description: ''
         required_fields: true
+        id: ''
+        classes: ''
       label: Andet
       region: content
 _core:
