--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -99,11 +99,12 @@ third_party_settings:
       weight: 4
       format_type: tab
       format_settings:
-        id: ''
-        classes: ''
-        formatter: closed
+        label: Andet
+        formatter: open
         description: ''
         required_fields: true
+        id: ''
+        classes: ''
       label: Andet
       region: content
 id: node.event.default
