--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -74,8 +74,8 @@ content:
       field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
-      selection_mode: selection_append
-      open: false
+      open: true
+      selection_mode: selection_prepend
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
