VI-390 adding block edit link

--- a/composer.json
+++ b/composer.json
@@ -118,7 +118,8 @@
         "patches": {
             "drupal/core": {
                 "2868294 - Call to a member function getThirdPartySetting() on null in ContentTranslationManager": "https://www.drupal.org/files/issues/2868294-12.patch",
-                "2449895 - Imported PO files have no public URL but have a link at admin/content/files" : "https://www.drupal.org/files/issues/2449895-20.patch"
+                "2449895 - Imported PO files have no public URL but have a link at admin/content/files" : "https://www.drupal.org/files/issues/2449895-20.patch",
+                "2407761 - Add a way to edit block content on the block layout page" : "https://www.drupal.org/files/issues/add_edit_link_to_block_list-2407761-5.patch"
             },
             "drupal/photoswipe": {
                 "2921487 - Load PhotoSwipe on all non-admin pages" : "https://www.drupal.org/files/issues/edit_load_photoswipe_on-2921487-2.patch",
