--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,10 @@
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/block_scheduler": "^1.0",
         "drupal/eu_cookie_compliance": "1.x-dev",
-        "drupal/entity_clone": "1.x-dev"
+        "drupal/entity_clone": "1.x-dev",
+        "drupal/honeypot": "^1.27",
+        "drupal/mailsystem": "^4.1",
+        "drupal/smtp": "^1.0@beta"
     },
     "repositories": [
         {
