--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -44,6 +44,7 @@ module:
   focal_point: 0
   help: 0
   history: 0
+  honeypot: 0
   image: 0
   image_widget_crop: 0
   inline_entity_form: 0
@@ -68,6 +69,7 @@ module:
   mailchimp_campaign: 0
   mailchimp_lists: 0
   mailchimp_signup: 0
+  mailsystem: 0
   media: 0
   media_entity_facebook: 0
   media_entity_instagram: 0
@@ -106,6 +108,7 @@ module:
   search_api_db: 0
   serialization: 0
   simple_oauth: 0
+  smtp: 0
   stage_file_proxy: 0
   system: 0
   taxonomy: 0
