VI-415 adding dialog.ajax as a library dependency

--- a/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.libraries.yml
@@ -12,6 +12,7 @@ vih-subscription-terms-and-conditions-modal:
   dependencies:
     - core/jquery
     - core/drupalSettings
+    - core/drupal.dialog.ajax
 vih-subscription-suboptions-container:
   version: 1.x
   js:
